--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "first-personal-project",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:4005",
+  "main": "server/server.js",
   "dependencies": {
     "axios": "^0.19.0",
     "express": "^4.17.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-select": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
